--- a/UplanServer/Web.config
+++ b/UplanServer/Web.config
@@ -14,8 +14,18 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="redisConnstring" value="localhost:6379,password=123456,connectTimeout=10000,connectRetry=5,syncTimeout=10000,abortConnect=false"/>
     <add key="oraHelperCfg" value="localhost;1521;oss;uplan;Smart9080" />
+    <!--<add key="oraHelperCfg" value="111.53.74.132;1521;oss;uplan;Smart9080" />-->
   </appSettings>
+  <!--
+    有关 web.config 更改的说明，请参见 http://go.microsoft.com/fwlink/?LinkId=235367。
+
+    可在 <httpRuntime> 标记上设置以下特性。
+      <system.Web>
+        <httpRuntime targetFramework="4.7" />
+      </system.Web>
+  -->
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
@@ -99,9 +109,9 @@
     <version number="*">
       <dataSources>
         <dataSource alias="SampleDataSource" descriptor="(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=localhost)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=ORCL))) " />
-        <dataSource alias="221oracle" descriptor="(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=221.238.40.153)(PORT=7069))(CONNECT_DATA=(SERVICE_NAME=orcl)))"/>
-        <dataSource alias="111oracle" descriptor="(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=111.53.74.132)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=oss)))"/>
-        <dataSource alias="111oracle_localhost" descriptor="(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=localhost)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=oss)))"/>
+        <dataSource alias="221oracle" descriptor="(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=221.238.40.153)(PORT=7069))(CONNECT_DATA=(SERVICE_NAME=orcl)))" />
+        <dataSource alias="111oracle" descriptor="(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=111.53.74.132)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=oss)))" />
+        <dataSource alias="111oracle_localhost" descriptor="(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=localhost)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=oss)))" />
       </dataSources>
     </version>
   </oracle.manageddataaccess.client>
@@ -117,7 +127,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="QoEContext" providerName="Oracle.ManagedDataAccess.Client" connectionString="Data Source=111oracle_localhost;Persist Security Info=True;User ID=uplan;Password=Smart9080;" />
-    <add name="WorkLogContent" providerName="Oracle.ManagedDataAccess.Client" connectionString="Data Source=111oracle_localhost;Persist Security Info=True;User ID=work;Password=Smart9080;" />
+    <add name="QoEDbContext" providerName="Oracle.ManagedDataAccess.Client" connectionString="Data Source=111oracle_localhost;Persist Security Info=True;User ID=uplan;Password=Smart9080;" />
+    <add name="WorkLogDbContext" providerName="Oracle.ManagedDataAccess.Client" connectionString="Data Source=111oracle_localhost;Persist Security Info=True;User ID=work;Password=Smart9080;" />
   </connectionStrings>
 </configuration>
