--- a/UplanServer/packages.config
+++ b/UplanServer/packages.config
@@ -27,6 +27,7 @@
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net45" />
   <package id="Oracle.ManagedDataAccess" version="18.6.0" targetFramework="net45" />
   <package id="Oracle.ManagedDataAccess.EntityFramework" version="18.3.0" targetFramework="net45" />
+  <package id="StackExchange.Redis.StrongName" version="1.2.6" targetFramework="net45" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
