--- a/UplanServer/Web.config
+++ b/UplanServer/Web.config
@@ -142,7 +142,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="QoEDbContext" providerName="Oracle.ManagedDataAccess.Client" connectionString="Data Source=111oracle_localhost;Persist Security Info=True;User ID=uplan;Password=Smart9080;" />
+    <add name="QoEDbContext" providerName="Oracle.ManagedDataAccess.Client" connectionString="Data Source=111oracle;Persist Security Info=True;User ID=uplan;Password=Smart9080;" />
     <add name="WorkLogDbContext" providerName="Oracle.ManagedDataAccess.Client" connectionString="Data Source=111oracle_localhost;Persist Security Info=True;User ID=work;Password=Smart9080;" />
   </connectionStrings>
 </configuration>
